# signaldesk

./: .dockerignore  .env.example  .gitignore  AGENTS.md  AI_USAGE_DISCLOSURE.md  Dockerfile  README.md  RUNBOOK.md  TEST_REPORT.md  docker-compose.yml  init.sql  pyproject.toml  railway.json
.github/workflows/: ci.yml
app/: __init__.py  auth.py  bootstrap.py  config.py  dashboard.py  db.py  feedback.py  health.py  insights.py  main.py  middleware.py  queries.py  schemas.py  seed.py
backend/: Dockerfile  init.sql  pyproject.toml  railway.json
backend/src/signaldesk/: auth.py  bootstrap.py  config.py  dashboard.py  db.py  feedback.py  health.py  insights.py  logging.py  main.py  middleware.py  queries.py  schemas.py  seed.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_deployment.py  test_e2e.py  test_feedback.py  test_health.py  test_insights.py  test_middleware.py
frontend/: .gitignore  Caddyfile  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  playwright.config.ts  playwright.global-setup.ts  railway.json  vite.config.ts
frontend/e2e/: happy-path.spec.ts  tsconfig.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AppLayout.tsx  DashboardMetricCard.tsx  DashboardTrendChart.tsx  ErrorBanner.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  FeedbackCreateModal.tsx  FeedbackDetailModal.test.tsx  FeedbackDetailModal.tsx  FeedbackFilterBar.test.tsx  InsightsCard.tsx  (+5 more)
tests/: conftest.py  test_dashboard.py  test_deployment.py  test_e2e.py  test_health.py  test_insights.py  test_middleware.py
(+14 files in other folders)
